# zpaq-rs

./: Cargo.toml  README.md  build.rs  zpaq_rs_ffi.cpp
.github/workflows/: rust.yml
src/: lib.rs  sys.rs
tests/: streaming_bits.rs  zpaq_archive_interop.rs
zpaq/: Makefile  libzpaq.cpp  libzpaq.h
