[package]
name = "zpaq_rs"
version = "1.0.3"
edition = "2024"
license = "CC0-1.0"
description = "Safe Rust bindings for libzpaq — ZPAQ compression, decompression, streaming compression, and crypto utilities (SHA-1, SHA-256, AES-CTR, scrypt)."
repository = "https://github.com/turtle261/zpaq-rs"
homepage = "https://github.com/turtle261/zpaq-rs"
documentation = "https://docs.rs/zpaq_rs"
keywords = ["zpaq", "compression"]
categories = ["compression"]
authors = ["Noah Cashin <noahc959@icloud.com>"]
build = "build.rs"

[features]
default = []
nojit = []

[lib]
name = "zpaq_rs"
crate-type = ["rlib"]

[dependencies]

[dev-dependencies]
hex = "0.4"

[build-dependencies]
cc = "1"
